--- a/TrafficLightHomework/Base.lproj/Main.storyboard
+++ b/TrafficLightHomework/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,74 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLightHomework" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fi-x3-Mlp">
+                                <rect key="frame" x="122" y="698" width="170" height="70"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170.00000000000003" id="0Se-SL-r68"/>
+                                    <constraint firstAttribute="height" constant="69.999999999999886" id="2vc-vT-36A"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="trafficLightSwitched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rNb-d7-9wY"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cc2-YB-oTG">
+                                <rect key="frame" x="157" y="434" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100.00000000000014" id="bMI-9g-llP"/>
+                                    <constraint firstAttribute="height" constant="100.00000000000006" id="rF1-9Q-Yfl"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csx-JH-gBG">
+                                <rect key="frame" x="157" y="174" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100.00000000000014" id="8wr-eh-aaq"/>
+                                    <constraint firstAttribute="height" constant="100.00000000000006" id="9aN-lK-59Z"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0g-3w-fQM">
+                                <rect key="frame" x="157" y="304" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="99.999999999999972" id="PKa-Ql-UT1"/>
+                                    <constraint firstAttribute="width" constant="100.00000000000014" id="UW5-kq-neh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="f0g-3w-fQM" firstAttribute="top" secondItem="csx-JH-gBG" secondAttribute="bottom" constant="29.999999999999943" id="7uZ-YH-RAR"/>
+                            <constraint firstItem="csx-JH-gBG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FhA-yz-Cid"/>
+                            <constraint firstItem="f0g-3w-fQM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fa9-ND-P2i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1Fi-x3-Mlp" secondAttribute="bottom" constant="93.999999999999886" id="grA-Kh-doX"/>
+                            <constraint firstItem="cc2-YB-oTG" firstAttribute="top" secondItem="f0g-3w-fQM" secondAttribute="bottom" constant="29.999999999999943" id="m3B-T4-bpB"/>
+                            <constraint firstItem="1Fi-x3-Mlp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nJA-zB-gT6"/>
+                            <constraint firstItem="cc2-YB-oTG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="rgL-Ie-Lu8"/>
+                            <constraint firstItem="csx-JH-gBG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="130" id="uLr-PE-5od"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="cc2-YB-oTG" id="tVa-hM-F4u"/>
+                        <outlet property="redLight" destination="csx-JH-gBG" id="5zb-Xj-0Jt"/>
+                        <outlet property="startButton" destination="1Fi-x3-Mlp" id="uN2-7R-Ae9"/>
+                        <outlet property="yellowLight" destination="f0g-3w-fQM" id="Ebl-Dl-oMB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
         </scene>
     </scenes>
 </document>
