--- a/TrafficLightHomework/Base.lproj/Main.storyboard
+++ b/TrafficLightHomework/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fi-x3-Mlp">
-                                <rect key="frame" x="122" y="698" width="170" height="70"/>
+                                <rect key="frame" x="122" y="712" width="170" height="70"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170.00000000000003" id="0Se-SL-r68"/>
@@ -31,7 +31,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cc2-YB-oTG">
-                                <rect key="frame" x="157" y="434" width="100" height="100"/>
+                                <rect key="frame" x="157" y="404" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100.00000000000014" id="bMI-9g-llP"/>
@@ -39,7 +39,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csx-JH-gBG">
-                                <rect key="frame" x="157" y="174" width="100" height="100"/>
+                                <rect key="frame" x="157" y="144" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100.00000000000014" id="8wr-eh-aaq"/>
@@ -47,7 +47,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0g-3w-fQM">
-                                <rect key="frame" x="157" y="304" width="100" height="100"/>
+                                <rect key="frame" x="157" y="274" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="99.999999999999972" id="PKa-Ql-UT1"/>
@@ -60,11 +60,11 @@
                             <constraint firstItem="f0g-3w-fQM" firstAttribute="top" secondItem="csx-JH-gBG" secondAttribute="bottom" constant="29.999999999999943" id="7uZ-YH-RAR"/>
                             <constraint firstItem="csx-JH-gBG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FhA-yz-Cid"/>
                             <constraint firstItem="f0g-3w-fQM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fa9-ND-P2i"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1Fi-x3-Mlp" secondAttribute="bottom" constant="93.999999999999886" id="grA-Kh-doX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1Fi-x3-Mlp" secondAttribute="bottom" constant="80" id="grA-Kh-doX"/>
                             <constraint firstItem="cc2-YB-oTG" firstAttribute="top" secondItem="f0g-3w-fQM" secondAttribute="bottom" constant="29.999999999999943" id="m3B-T4-bpB"/>
                             <constraint firstItem="1Fi-x3-Mlp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nJA-zB-gT6"/>
                             <constraint firstItem="cc2-YB-oTG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="rgL-Ie-Lu8"/>
-                            <constraint firstItem="csx-JH-gBG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="130" id="uLr-PE-5od"/>
+                            <constraint firstItem="csx-JH-gBG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="uLr-PE-5od"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
